--- a/css/main.css
+++ b/css/main.css
@@ -1737,7 +1737,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #2dc6b5;
+  background: #54fac7;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
